--- a/digital.html
+++ b/digital.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="nav-menu">
                 <ul class="navbar-nav ms-auto my-2">
                     <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="digital.html">Fiber</a></li>
+                    <li class="nav-item"><a class="nav-link" href="digital.html">Digital</a></li>
                 </ul>
 
         </div>
