--- a/ceramic.html
+++ b/ceramic.html
@@ -45,13 +45,13 @@ doctype html>
           <div class="col-6">
             <div class="p-3"> <figure class="figure">
                 <img src="images/ceramic1.jpeg" class="figure-img img-fluid rounded text-center"  alt="Vase">
-                <figcaption class="figure-caption">Vase</figcaption>
+                <figcaption class="figure-caption">Bowls</figcaption>
               </figure></div>
           </div>
           <div class="col-6">
             <div class="p-3">      <figure class="figure">
                 <img src="images/ceramic2.jpeg" class="figure-img img-fluid rounded" alt="Bowl">
-                <figcaption class="figure-caption">Bowls</figcaption>
+                <figcaption class="figure-caption">Vases</figcaption>
               </figure></div>
           </div>
           <div class="col-6">
