--- a/digital.html
+++ b/digital.html
@@ -56,7 +56,7 @@
           <div class="col-6">
             <div class="p-3"> <figure class="figure">
                 <img src="images/namecard.jpg" class="figure-img img-fluid rounded text-center"  alt="Namecard">
-                <figcaption class="figure-caption">Hypegirl Poster</figcaption>
+                <figcaption class="figure-caption">Namecard</figcaption>
               </figure></div>
           </div>
         </div>
