--- a/fiber.html
+++ b/fiber.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-md bg-white navbar-white fixed-top">
         <div class="container">
-                <a class="navbar-brand" href="fiber.html">
+                <a class="navbar-brand" href="index.html">
                 <img src="images/nol0.png" alt="로고" width="35" height="35"></a>
    
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu"
@@ -62,7 +62,7 @@
           </div>
           <div class="col-6">
             <div class="p-3"> <figure class="figure">
-                <img src="images/sewing.jpg" class="figure-img img-fluid rounded text-center" width="50%" alt="Needlework">
+                <img src="images/sewing.jpg"  class="figure-img img-fluid rounded text-center" width="50%" alt="Needlework">
                 <figcaption class="figure-caption">Needlework</figcaption>
               </figure></div>
           </div>
