--- a/ceramic.html
+++ b/ceramic.html
@@ -17,7 +17,7 @@ doctype html>
 
     <nav class="navbar navbar-expand-md bg-white navbar-white fixed-top">
         <div class="container">
-                <a class="navbar-brand" href="ceramic.html">
+                <a class="navbar-brand" href="index.html">
                 <img src="images/nol0.png" alt="로고" width="35" height="35"></a>
    
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-menu"
